test des refs